@@ -1,0 +1,8 @@
+{
+	"Revitalize.Objects.Crafting.Blueprint.Machines.EnergyGeneration.SuperiorSolarPanel":
+	{
+		"displayName":"Superior Solar Panel",
+		"description":"A blueprint on how to craft a superior solar panel at the workbench.",
+		"category":"StardewValley.Crafting"
+	},
+}
