@@ -51,5 +51,7 @@ namespace Omegasis.Revitalize.Framework.Constants.Ids.Items.BlueprintIds
 
         public const string BurnerGenerator = "Revitalize.Objects.Crafting.Blueprint.Workbench.Machines.EnergyGeneration.BurnerGenerator";
 		public const string NuclearGenerator = "Revitalize.Objects.Crafting.Blueprint.Workbench.Machines.EnergyGeneration.NuclearGenerator";
+		public const string AdvancedSolarPanel = "Revitalize.Objects.Crafting.Blueprint.Machines.EnergyGeneration.AdvancedSolarPanel";
+		public const string SuperiorSolarPanel = "Revitalize.Objects.Crafting.Blueprint.Machines.EnergyGeneration.SuperiorSolarPanel";
     }
 }
