@@ -18,63 +18,70 @@ namespace Omegasis.Revitalize.Framework.World.Objects.Machines.EnergyGeneration
     [XmlType("Mods_Revitalize.Framework.World.Objects.Machines.EnergyGeneration.AdvancedSolarPanel")]
     public class AdvancedSolarPanel : Machine
     {
-        public readonly NetInt maxDaysToProduceBattery = new NetInt();
         public readonly NetInt daysRemainingToProduceBattery = new NetInt();
+        public readonly NetEnum<SolarPanelTier> solarPanelTier = new NetEnum<SolarPanelTier>();
+
+        public enum SolarPanelTier
+        {
+            Advanced,
+            Superior
+        }
 
         public AdvancedSolarPanel() { }
 
-        public AdvancedSolarPanel(BasicItemInformation info) : base(info)
+        public AdvancedSolarPanel(BasicItemInformation info, SolarPanelTier SolarPanelTier) : this(info,Vector2.Zero,SolarPanelTier)
         {
-            this.maxDaysToProduceBattery.Value = 6;
-            this.daysRemainingToProduceBattery.Value = this.maxDaysToProduceBattery.Value;
+        }
+
+        public AdvancedSolarPanel(BasicItemInformation info, Vector2 TilePosition, SolarPanelTier SolarPanelTier) : base(info,TilePosition)
+        {
+            this.solarPanelTier.Value = SolarPanelTier;
+            this.daysRemainingToProduceBattery.Value = this.getDaysToProduceABattery();
         }
 
         protected override void initializeNetFieldsPostConstructor()
         {
             base.initializeNetFieldsPostConstructor();
-            this.NetFields.AddFields(this.maxDaysToProduceBattery, this.daysRemainingToProduceBattery);
+            this.NetFields.AddFields(this.solarPanelTier, this.daysRemainingToProduceBattery);
         }
 
         public override Item getOne()
         {
-            AdvancedSolarPanel component = new AdvancedSolarPanel(this.basicItemInformation.Copy());
+            AdvancedSolarPanel component = new AdvancedSolarPanel(this.basicItemInformation.Copy(),this.solarPanelTier.Value);
             return component;
         }
 
         public override void doActualDayUpdateLogic(GameLocation location)
         {
             if (!this.getCurrentLocation().IsOutdoors) return;
-            if (Game1.weatherIcon == Game1.weather_snow || Game1.weatherIcon == Game1.weather_rain || Game1.weatherIcon == Game1.weather_lightning) return;
+            if (Game1.IsRainingHere(location) || Game1.IsLightningHere(location) || Game1.IsSnowingHere(location)) return;
             if (this.heldObject.Value != null) return;
 
             this.daysRemainingToProduceBattery.Value -= 1;
             if (this.daysRemainingToProduceBattery.Value == 0)
             {
-                this.daysRemainingToProduceBattery.Value = this.maxDaysToProduceBattery.Value;
+                this.daysRemainingToProduceBattery.Value = this.getDaysToProduceABattery();
                 this.heldObject.Value = ObjectUtilities.getStardewObjectFromEnum(Enums.SDVObject.BatteryPack, 1);
             }
 
         }
 
-        public override void draw(SpriteBatch spriteBatch, int x, int y, float alpha = 1f)
+        public override bool shouldDoDayUpdate()
         {
-            if (this.AnimationManager == null)
-                spriteBatch.Draw(this.CurrentTextureToDisplay, Game1.GlobalToLocal(Game1.viewport, new Vector2(x * Game1.tileSize, y * Game1.tileSize)), new Rectangle?(this.AnimationManager.getCurrentAnimationFrameRectangle()), this.getItemInformation().DrawColor * alpha, 0f, Vector2.Zero, Game1.pixelZoom, this.flipped ? SpriteEffects.FlipHorizontally : SpriteEffects.None, Math.Max(0f, y * Game1.tileSize / 10000f));
+            return this.dayUpdateCounter>=2;
+        }
 
-            else
+        public virtual int getDaysToProduceABattery()
+        {
+            switch (this.solarPanelTier.Value)
             {
-                float addedDepth = 0;
-                this.AnimationManager.draw(spriteBatch, this.CurrentTextureToDisplay, Game1.GlobalToLocal(Game1.viewport, new Vector2(x * Game1.tileSize, y * Game1.tileSize)), new Rectangle?(this.AnimationManager.getCurrentAnimationFrameRectangle()), this.getItemInformation().DrawColor * alpha, 0f, Vector2.Zero, Game1.pixelZoom, this.flipped ? SpriteEffects.FlipHorizontally : SpriteEffects.None, Math.Max(0f, (float)((y + addedDepth) * Game1.tileSize) / 10000f) + .00001f);
-                try
-                {
-                    this.AnimationManager.tickAnimation();
-                }
-                catch (Exception err)
-                {
-                    RevitalizeModCore.ModMonitor.Log(err.ToString());
-                }
+                case SolarPanelTier.Advanced:
+                    return 5;
+                case SolarPanelTier.Superior:
+                    return 3;
+                default:
+                    return 7;
             }
-
         }
 
     }
