@@ -1,0 +1,53 @@
+{
+  "itemToDraw": {
+    "stardewValleyItemId": "NULL",
+    "stardewValleyBigCraftableId": "NULL",
+    "registeredObjectId": "Revitalize.Objects.Machines.EnergyGeneration.AdvancedSolarPanel",
+    "amount": 1
+  },
+  "recipesToUnlock": {
+	  "Revitalize.Crafting.CraftingRecipeBooks.Workbench": "Revitalize.Workbench.Machines.EnergyGeneration.AdvancedSolarPanel"
+  },
+  "id": "Revitalize.Objects.Crafting.Blueprint.Machines.EnergyGeneration.AdvancedSolarPanel",
+  "name": "",
+  "description": "",
+  "categoryId": "StardewValley.Crafting",
+  "healthRestoredOnEating": -300,
+  "staminaRestoredOnEating": -300,
+  "fraglility": 0,
+  "sellingPrice": 0,
+  "canBeSetIndoors": true,
+  "canBeSetOutdoors": true,
+  "ignoreBoundingBox": false,
+  "boundingBoxTileDimensions": "2, 2",
+  "drawTileOffset": "0, 0",
+  "drawColor": {
+    "B": 255,
+    "G": 255,
+    "R": 255,
+    "A": 255
+  },
+  "animationManager": {
+    "modManifestId": "Omegasis.Revitalize",
+    "textureManagerId": "Revitalize.Items.Crafting",
+    "textureId": "Blueprint",
+    "defaultAnimationKey": "Default",
+    "startingAnimationKey": "Default",
+    "animations": {
+      "Default": {
+        "animationFrames": [
+          {
+            "animationSourceRectangle": {
+              "X": 0,
+              "Y": 0,
+              "Width": 32,
+              "Height": 32
+            },
+            "drawForXFrames": 0
+          }
+        ],
+        "shouldAnimationLoopWhenFinished": false
+      }
+    }
+  }
+}
