@@ -8,6 +8,10 @@ Key:
     Shows multiple statistics about the player.
 +Added in Statue of Perfection Tracking.
     -Tells you what you are missing from shipped items, cooking recipes, crafting recipes, and caught fish.
++Added in Advanced Solar Panels
+    -Makes a Battery Pack every 5 sunny days.
++Added in Superior Solar Panels
+    -Makes a Battery Pack every 3 sunny days.
 ~~~~~~~~~~~~0.0.1 Revitalize 12-12-2022 xx.xx P.M~~~~~~~~~~~~~~
 ~ElectricFurnaces (and their upgrade tiers) now glow when smelting items.
 ~Reworked some logic regarding the LightManager class to work better, but it might still have issues since that original code was written years ago so there might be cases where I should makde different changes.
